Servicecloud/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Month__c</fullName>
        <formula>VALUE(LPAD(MID(TEXT(CreatedDate - (0.04167 * 4)), 12, 2),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>VALUE(MID(Text(CreatedDate), 12, 2)&amp;MID(Text(CreatedDate), 15, 2)&amp;MID(Text(CreatedDate), 18, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Month__c</fullName>
        <formula>IF(VALUE(LPAD(MID(TEXT(CreatedDate - (0.04167 * 4)), 12, 2),2)) &lt; 8, &quot;Evening&quot;, 
IF(VALUE(LPAD(MID(TEXT(CreatedDate - (0.04167 * 4)), 12, 2),2)) &lt; 12, &quot;Morning&quot;, 
IF(VALUE(LPAD(MID(TEXT(CreatedDate - (0.04167 * 4)), 12, 2),2)) &lt; 20, &quot;Afternoon&quot;, 
&quot;Evening&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testing Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Month__c</fullName>
        <formula>IF( LEN( TEXT(Month(DATEVALUE( CreatedDate ))))=1 , &apos;0&apos;+ Text(Month(DATEVALUE( CreatedDate ))),Text(Month(DATEVALUE( CreatedDate ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Month</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Test_name</fullName>
        <active>true</active>
        <errorConditionFormula>Email = &apos;narasima27@gmail.com&apos;</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>This is not correct email</errorMessage>
    </validationRules>
</CustomObject>